# adaptive-thresholding

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  conanfile.txt
data/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/algorithm/: algorithm.hpp  binarization_algorithm_base.hpp  otsu.cpp  otsu.hpp
src/base/: CMakeLists.txt  crtp.hpp  make_array.hpp
src/binarization/: CMakeLists.txt  binarization.hpp  constant.hpp
src/binarization/algorithm/: CMakeLists.txt  algorithm.hpp  algorithm_base.hpp  otsu.cpp  otsu.hpp
src/binarization/performance/: CMakeLists.txt  confusion_matrix.cpp  confusion_matrix.hpp  performance.hpp  performance_calculator.cpp  performance_calculator.hpp
src/image_processing/: CMakeLists.txt  algorithm_base.hpp  constant.hpp  image_processing.hpp
src/image_processing/binarization/: bernsen.cpp  bernsen.hpp  binarization.hpp  otsu.cpp  otsu.hpp
src/image_processing/skeletonization/: skeletonization.hpp
src/performance_evaluation/: confusion_matrix.cpp  confusion_matrix.hpp  performance_calculator.cpp  performance_calculator.hpp  performance_metric.hpp
tools/cmake/: CMakeLists.txt  longlp_desired_compile_features.cmake  longlp_desired_compile_options.cmake  longlp_download_conan_cmake_if_not_exist.cmake  longlp_make_exec.cmake  longlp_make_library.cmake  longlp_message.cmake
