# GLOBALS--------------------------------------------------------------------------------------------------------------
## LONGLP_PROJECT_DIR, LONGLP_PROJECT_TARGET_NAME, LONGLP_COMPILE_OPTIONS, LONGLP_COMPILE_FEATURES

# CONFIG---------------------------------------------------------------------------------------------------------------
add_subdirectory (base)
add_subdirectory (image_processing)
